--- a/src/css/index.css
+++ b/src/css/index.css
@@ -45,3 +45,9 @@ li {
   margin: 15px 0 15px 0;
   list-style-type: none;
 }
+
+.task_container {
+  font-size: 20px;
+  margin-left: 50px;
+  margin-bottom: 70px;
+}
